[gd_scene load_steps=5 format=2]

[ext_resource path="res://spaceship/module_grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://spaceship/spaceship.gd" type="Script" id=2]
[ext_resource path="res://sound/exhaust.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/explosion.wav" type="AudioStream" id=4]

[node name="Spaceship" type="RigidBody2D" groups=[
"Spaceship",
]]
gravity_scale = 0.0
contacts_reported = 100
contact_monitor = true
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="ModuleGrid" parent="." instance=ExtResource( 1 )]

[node name="ZoomedOutCam" type="Camera2D" parent="."]
zoom = Vector2( 5, 5 )

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ModuleRemovedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -2.5

[connection signal="body_shape_entered" from="." to="." method="_on_Spaceship_body_shape_entered"]
[connection signal="module_added" from="ModuleGrid" to="." method="_on_ModuleGrid_module_added"]
[connection signal="module_removed" from="ModuleGrid" to="." method="_on_ModuleGrid_module_removed"]
